--- a/contact.html
+++ b/contact.html
@@ -340,7 +340,7 @@
               <div class="top04 pull-right">
                 <div class="custom block-two">
                   <p>
-                    <a class="b24-web-form-popup-btn-5" href="#">Обратный звонок</a>
+                    <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
                   </p>
                 </div>
               </div>
