--- a/floor.html
+++ b/floor.html
@@ -340,7 +340,7 @@
               <div class="top04 pull-right">
                 <div class="custom block-two">
                   <p>
-                    <a class="b24-web-form-popup-btn-5" href="#">Обратный звонок</a>
+                    <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
                   </p>
                 </div>
               </div>
@@ -1175,7 +1175,7 @@
               <div class="custom z-one">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Мешки для мусора - БЕСПЛАТНО!!!</h4>
-                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
               </div>
             </div>
           </div>
@@ -1184,7 +1184,7 @@
               <div class="custom z-two">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Фасовка и уборка мусора - БЕСПЛАТНО!!!</h4>
-                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</></p>
               </div>
             </div>
           </div>
@@ -1193,7 +1193,7 @@
               <div class="custom z-three">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>СКИДКА 30% на погрузку, вывоз и утилизацию мусора!!!</h4>
-                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
               </div>
             </div>
           </div>
