--- a/redevelopment.html
+++ b/redevelopment.html
@@ -340,7 +340,7 @@
               <div class="top04 pull-right">
                 <div class="custom block-two">
                   <p>
-                    <a class="b24-web-form-popup-btn-5" href="#">Обратный звонок</a>
+                    <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
                   </p>
                 </div>
               </div>
@@ -534,7 +534,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <a class="b24-web-form-popup-btn-5 sd">Заказать</a>
+                            <div class="b24-web-form-popup-btn-5 sd">Заказать</div>
                           </td>
                         </tr>
                       </tbody>
@@ -560,7 +560,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <a class="b24-web-form-popup-btn-5 sd">Заказать</a>
+                            <div class="b24-web-form-popup-btn-5 sd">Заказать</div>
                           </td>
                         </tr>
                       </tbody>
@@ -591,7 +591,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <a class="b24-web-form-popup-btn-5 sd">Заказать</a>
+                            <div class="b24-web-form-popup-btn-5 sd">Заказать</div>
                           </td>
                         </tr>
                       </tbody>
@@ -626,7 +626,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <a class="b24-web-form-popup-btn-5 sd">Заказать</a>
+                            <div class="b24-web-form-popup-btn-5 sd">Заказать</div>
                           </td>
                         </tr>
                       </tbody>
@@ -777,7 +777,7 @@
               <div class="custom z-one">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Мешки для мусора - БЕСПЛАТНО!!!</h4>
-                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
               </div>
             </div>
           </div>
@@ -786,7 +786,7 @@
               <div class="custom z-two">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Фасовка и уборка мусора - БЕСПЛАТНО!!!</h4>
-                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
               </div>
             </div>
           </div>
@@ -795,7 +795,7 @@
               <div class="custom z-three">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>СКИДКА 30% на погрузку, вывоз и утилизацию мусора!!!</h4>
-                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
               </div>
             </div>
           </div>
