--- a/floor.html
+++ b/floor.html
@@ -1184,7 +1184,7 @@
               <div class="custom z-two">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Фасовка и уборка мусора - БЕСПЛАТНО!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</></p>
+                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
               </div>
             </div>
           </div>
