--- a/garbage.html
+++ b/garbage.html
@@ -736,7 +736,6 @@
                       </table>
                     </div>
                     <div class="clearfix"></div>
-                    <a id="st3"></a>
                     <div class="col-xs-12 col-sm-6 col-md-6">
                       <table class="table b50" style="width: 100%;">
                         <tbody>
@@ -849,7 +848,62 @@
                       </table>
                     </div>
                     <div class="clearfix"></div>
-
+                    <div class="col-xs-12 col-sm-6 col-md-6 garbage_row center_table">
+                      <table class="table b50" style="width: 100%;">
+                        <tbody>
+                          <tr>
+                            <td colspan="4">Тип транспорта: ПУХТО<br>Объём - до 27 кубов, грузоподъёмность - до 10000 кг.
+                            </td>
+                          </tr>
+                          <tr>
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/puhto27.png" alt="" width="250"
+                                height="133"></td>
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/27m3-2.png" alt="" width="250"
+                                height="133"></td>
+                          </tr>
+                          <tr>
+                            <td colspan="4">
+                              <div class="garbage_sale">Цены с учетом утилизации мусора.<br>Цена указана за наличный
+                                расчет.<br>Работаем так
+                                же с НДС или по УСН.
+                              </div>
+                            </td>
+                          </tr>
+                          <tr class="title-hide">
+                            <td colspan="2">
+                              <div class="garbage_demon">При заказе демонтажных услуг</div>
+                            </td>
+                            <td colspan="2">
+                              <div class="garbage_nodemon">Без демонтажных работ</div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td data-label="Стоимость при заказе демонтажных услуг">
+                              <p><strong>Стоимость</strong></p>
+                              <h6>24000 руб.</h6>
+                            </td>
+                            <td data-label="Погрузка при заказе демонтажных услуг">
+                              <p><strong>Погрузка</strong></p>
+                              <h6>3500 руб.</h6>
+                            </td>
+                            <td data-label="Стоимость без демонтажных работ">
+                              <p><strong>Стоимость</strong></p>
+                              <h6>32500 руб.</h6>
+                            </td>
+                            <td data-label="Погрузка без демонтажных работ">
+                              <p><strong>Погрузка</strong></p>
+                              <h6>4700 руб.</h6>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td colspan="4">
+                              <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="clearfix"></div>
                     <h2 class="garbage_tittle" id="fasovka">Фасовка мусора </h2>
                     <table class="table">
                       <thead>
