--- a/ceiling.html
+++ b/ceiling.html
@@ -340,7 +340,7 @@
               <div class="top04 pull-right">
                 <div class="custom block-two">
                   <p>
-                    <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
+                  <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
                   </p>
                 </div>
               </div>
@@ -421,7 +421,8 @@
                           <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
                           <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
                           <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
-                          <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
+                          <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция
+                          </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
@@ -927,7 +928,9 @@
               <div class="custom z-one">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Мешки для мусора - БЕСПЛАТНО!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
+                <p>
+                <div class="b24-web-form-popup-btn-5 sdk">Заказать</div>
+                </p>
               </div>
             </div>
           </div>
@@ -936,7 +939,9 @@
               <div class="custom z-two">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>Фасовка и уборка мусора - БЕСПЛАТНО!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
+                <p>
+                <div class="b24-web-form-popup-btn-5 sdk">Заказать</div>
+                </p>
               </div>
             </div>
           </div>
@@ -945,7 +950,10 @@
               <div class="custom z-three">
                 <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>СКИДКА 30% на погрузку, вывоз и утилизацию мусора!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</></p>
+                <p>
+                <div class="b24-web-form-popup-btn-5 sdk">Заказать</>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -1734,16 +1742,17 @@
     <div class="container">
       <h2>Видео наших работ</h2>
       <div class="video_flex">
-        <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
-          rel="noopener">
+        <a href="https://rutube.ru/video/a71458df8fb5b1333eec0ce3e565d149/" target="_blank" rel="noopener">
           <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
-          <span>Демонтаж квартиры на Невском проспекте.
-            Квартира на 5 этаже + мансарда.</span>
+          <span>Демонтаж квартиры на Невском проспекте.</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
-          rel="noopener">
+        <a href="https://rutube.ru/video/f07bde70b811e4aacf0c6fb6e8b4a84c/" target="_blank" rel="noopener">
           <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
-          <span> Видео отзыв </span>
+          <span>Погрузка и вывоз мусора.</span>
+        </a>
+        <a href="https://rutube.ru/video/2855dbe9aac005e09785c911063e8800/" target="_blank" rel="noopener">
+          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <span>Отзыв клиента </span>
         </a>
       </div>
     </div>
@@ -1759,22 +1768,26 @@
               <p>Добрый день! Спасибо мастеру за оперативную работу по демонтажу потолка в нашей квартире! Он выполнил
                 свою работу на отлично, несмотря на необходимость переделать работу неумелых мастеров. Мастером,
                 Константином, был проделан большой объем работ, за приемлемые деньги, трудности (во время выполнения
-                работ) преодолевал сам (съездил за недостающим материалом), никаких намеков на увеличение сметы, никаких
+                работ) преодолевал сам (съездил за недостающим материалом), никаких намеков на увеличение сметы,
+                никаких
                 разговоров о мнимых, невыполнимых трудностях.. В общем, мне Костя понравился своими человеческими
-                качествами и отношением к работе-труду, а про его профессиональные навыки, я очень кратко, уже упомянул
+                качествами и отношением к работе-труду, а про его профессиональные навыки, я очень кратко, уже
+                упомянул
                 ! Всем советую.</p>
             </td>
             <td>
               <p>Заказывали у инженера Антона демонтаж потолка. Результат выполнения работы отличный, нареканий по
                 качеству выполненной работы абсолютно нет. Работу выполнили быстро и качественно, удалили старый
-                потолок, вывезли весь мусор, все убрали – работа под ключ. Стоимость услуги соответствовала оговоренной.
+                потолок, вывезли весь мусор, все убрали – работа под ключ. Стоимость услуги соответствовала
+                оговоренной.
                 Я вполне могу рекомендовать его и его мастеров своим друзьям.</p>
             </td>
           </tr>
           <tr>
             <td>
               <p>Очень рада, что мне посоветовали такого специалиста для демонтажа потолка. Всё аккуратно и быстро
-                сделано — убрал все под ноль, даже не думала, что всё так может идеально получиться. Никаких перекуров,
+                сделано — убрал все под ноль, даже не думала, что всё так может идеально получиться. Никаких
+                перекуров,
                 только работа. Александр и как человек приятный, и как специалист грамотный: советы ценные дал по
                 дальнейшему ремонту. Я довольна результатом. Большое спасибо. Рекомендую обращаться.</p>
             </td>
@@ -1784,7 +1797,8 @@
               хотела. Качественно, аккуратно и ровно, недостатков просто нет. Спасибо! Работа на 5++!</td>
           </tr>
           <tr>
-            <td>Хорошая работа, мастер свое дело знает. Мы обращались за демонтажем потолка, работа выполнена на отлично
+            <td>Хорошая работа, мастер свое дело знает. Мы обращались за демонтажем потолка, работа выполнена на
+              отлично
               и очень быстро на мой взгляд, недостатков я не нахожу. И по цене тоже все в порядке.&nbsp;</td>
             <td>
               <p>Очень довольна работой Альберта. Он привел мой потолок в порядок. Снял старую отделку, отштукатурил и
@@ -1810,12 +1824,14 @@
         <br>→ <strong>частичная утилизация натяжных</strong> потолков; <br>→ увеличение стыков, между потолочными
         плитами.
       </p>
-      <p>Иными словами, демонтажные действия имеют широкое понятие, и включают в себя достаточно много различных работ.
+      <p>Иными словами, демонтажные действия имеют широкое понятие, и включают в себя достаточно много различных
+        работ.
         Если у вас возникнет вопрос, ответ на который вы не найдете в данной статье, то можете обратиться к менеджеру
         компании. Он ответит на все интересующие вас вопросы по <strong>демонтажу натяжного потолка</strong> и не
         только.</p>
       <p>Утилизация, сложная работа в этой отрасли, однако вы можете не беспокоиться. У нас работают мастера, которые
-        выполнят утилизацию на высшем уровне и за короткий промежуток времени. Никто не любит затяжные ремонты, ведь они
+        выполнят утилизацию на высшем уровне и за короткий промежуток времени. Никто не любит затяжные ремонты, ведь
+        они
         отнимают столько сил и времени, которое можно потратить на более полезные дела.</p>
       <h5>Разновидность поверхностей для демонтажа</h5>
       <p>Потолочных покрытий огромное изобилие.</p>
@@ -1823,19 +1839,24 @@
       <p>→ Традиционный – потолок полностью отштукатурен. <br>→ Классический – отделка гипсокартонными листами. <br>→
         Натяжной – использование разных тканей. <br>→ Самыми редкими являются деревянные и выполненные из панели
         потолки.</p>
-      <p>Начать <strong>демонтаж</strong> стоит с удаления штукатурки. Это может быть частичное или полное удаление, все
+      <p>Начать <strong>демонтаж</strong> стоит с удаления штукатурки. Это может быть частичное или полное удаление,
+        все
         зависит от состояния поверхности. Если штукатурка будет сваливаться вместе с краской, то придется удалять её
         всю. Если же потолок находится в хорошем состоянии, но имеются несколько сколов и трещин, то допускается
         <strong>частичное</strong> удаление.
       </p>
       <p>Чтобы удалить краску, которая была разбавлена водой, необходимо воспользоваться специальным шпателем, который
-        выполнен из стали. С его помощью мы снимаем старую краску. Если же ваш потолок покрыт известняковой побелкой, то
+        выполнен из стали. С его помощью мы снимаем старую краску. Если же ваш потолок покрыт известняковой побелкой,
+        то
         смываем её обычной водой.</p>
       <p>Следующий этап заключается в <strong>демонтаже</strong> плитки и плинтусов с потолка. Начинать удаление нужно
         всегда с угла комнаты, при этом используя специальные инструменты: молоток, шпатель и перфоратор. Если на
-        потолке остался клей, то его хорошо смачиваем водой и удаляем при помощи шпателя. В случае, когда сложно убрать
-        наросты обычным шпателем, используем специальную шлифовальную машинку с определенной насадкой для наростов.</p>
-      <p>Перед тем, как начать разбирать подвесной потолок, необходимо избавиться от основного покрытия, которое сначала
+        потолке остался клей, то его хорошо смачиваем водой и удаляем при помощи шпателя. В случае, когда сложно
+        убрать
+        наросты обычным шпателем, используем специальную шлифовальную машинку с определенной насадкой для наростов.
+      </p>
+      <p>Перед тем, как начать разбирать подвесной потолок, необходимо избавиться от основного покрытия, которое
+        сначала
         снимается возле стены. Действие проводится очень аккуратно, чтобы не повредить потолочное покрытие и имеющиеся
         декоративные вставки.</p>
       <p>После снятия основного покрытия, можно приступать к разборке каркаса. Такая работа требует от мастера
@@ -1843,14 +1864,15 @@
           потолки</strong> из ПВХ материала, то удаление нужно начинать при температуре не меньше 60 градусов.
         <strong>Разборка</strong> такого вида поверхности, производится с помощью специальной тепловой пушки.
         Обязательно нужно соблюдать тепловой режим, иначе низкая температура повредит материал и снизит срок
-        эксплуатации. Тканевые <strong>натяжные потолки</strong> гораздо удобнее и просты в <strong>демонтаже</strong>.
+        эксплуатации. Тканевые <strong>натяжные потолки</strong> гораздо удобнее и просты в
+        <strong>демонтаже</strong>.
       </p>
       <p>Мастера демонтируют абсолютно все виды потолочных покрытий. В демонтаже используется специальное
         высокотехнологичное оборудование, которое качественно справляется со своей работой.</p>
-      <p><a class="link-box link-pdf" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
+      <p><a class="link-box link-pdf" href="./images/sertifikat/price.pdf" target="_blank"
           data-fancybox-type="iframe">Прайс-лист на демонтажные услуги. </a></p>
       <p><a class="link-box link-pdf" href="./contact.html#sovet">Полезные советы </a></p>
-      <a class="link-box link-pdf present" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
+      <a class="link-box link-pdf present" href="./images/sertifikat/ser.jpg" target="_blank"
         data-fancybox-type="iframe">Подарочный сертификат </a>
     </div>
   </section>
@@ -1950,7 +1972,8 @@
       <div class="col-xs-12 col-sm-12 col-md-12">
         <div class="copy">© 2013-2024.&nbsp;&nbsp;</div>
         <div class="custom">
-          <p>Все права защищены.&nbsp; Использование материалов сайта без согласия его авторов и активной ссылки на сайт
+          <p>Все права защищены.&nbsp; Использование материалов сайта без согласия его авторов и активной ссылки на
+            сайт
             – запрещено.</p>
         </div>
       </div>
@@ -2007,9 +2030,9 @@
 
 
   </script>
- 
 
-  
+
+
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/bootstrap.min.js"></script>
