--- a/diamond.html
+++ b/diamond.html
@@ -2145,16 +2145,17 @@
     <div class="container">
       <h2>Видео наших работ</h2>
       <div class="video_flex">
-        <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
-          rel="noopener">
+        <a href="https://rutube.ru/video/a71458df8fb5b1333eec0ce3e565d149/" target="_blank" rel="noopener">
           <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
-          <span>Демонтаж квартиры на Невском проспекте.
-            Квартира на 5 этаже + мансарда.</span>
+          <span>Демонтаж квартиры на Невском проспекте.</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
-          rel="noopener">
+        <a href="https://rutube.ru/video/f07bde70b811e4aacf0c6fb6e8b4a84c/" target="_blank" rel="noopener">
           <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
-          <span> Видео отзыв </span>
+          <span>Погрузка и вывоз мусора.</span>
+        </a>
+        <a href="https://rutube.ru/video/2855dbe9aac005e09785c911063e8800/" target="_blank" rel="noopener">
+          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <span>Отзыв клиента </span>
         </a>
       </div>
     </div>
@@ -2239,11 +2240,11 @@
           конструкций.</li>
       </ol>
 
-      <p><a class="link-box link-pdf" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
-          data-fancybox-type="iframe">Прайс-лист на демонтажные услуги. </a></p>
-      <p><a class="link-box link-pdf" href="./contact.html#sovet">Полезные советы </a></p>
-      <a class="link-box link-pdf present" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
-        data-fancybox-type="iframe">Подарочный сертификат </a>
+      <p><a class="link-box link-pdf" href="./images/sertifikat/price.pdf" target="_blank"
+        data-fancybox-type="iframe">Прайс-лист на демонтажные услуги. </a></p>
+    <p><a class="link-box link-pdf" href="./contact.html#sovet">Полезные советы </a></p>
+    <a class="link-box link-pdf present" href="./images/sertifikat/ser.jpg" target="_blank"
+      data-fancybox-type="iframe">Подарочный сертификат </a>
     </div>
   </section>
 
