--- a/diamond.html
+++ b/diamond.html
@@ -288,7 +288,7 @@
                     </g>
                   </g>
                 </svg>
-              </i><a href="/contacts.html">Наши контакты</a></h5>
+              </i><a href="./contact.html#contact">Наши контакты</a></h5>
           </div>
         </div>
       </div>
@@ -2146,15 +2146,15 @@
       <h2>Видео наших работ</h2>
       <div class="video_flex">
         <a href="https://rutube.ru/video/a71458df8fb5b1333eec0ce3e565d149/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video1.jpg" alt="img">
           <span>Демонтаж квартиры на Невском проспекте.</span>
         </a>
         <a href="https://rutube.ru/video/f07bde70b811e4aacf0c6fb6e8b4a84c/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video2.jpg" alt="img">
           <span>Погрузка и вывоз мусора.</span>
         </a>
         <a href="https://rutube.ru/video/2855dbe9aac005e09785c911063e8800/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video3.jpg" alt="img">
           <span>Отзыв клиента </span>
         </a>
       </div>
