--- a/garbage.html
+++ b/garbage.html
@@ -288,7 +288,7 @@
                     </g>
                   </g>
                 </svg>
-              </i><a href="/contacts.html">Наши контакты</a></h5>
+              </i><a href="./contact.html#contact">Наши контакты</a></h5>
           </div>
         </div>
       </div>
@@ -1115,15 +1115,15 @@
       <h2>Видео наших работ</h2>
       <div class="video_flex">
         <a href="https://rutube.ru/video/a71458df8fb5b1333eec0ce3e565d149/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video1.jpg" alt="img">
           <span>Демонтаж квартиры на Невском проспекте.</span>
         </a>
         <a href="https://rutube.ru/video/f07bde70b811e4aacf0c6fb6e8b4a84c/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video2.jpg" alt="img">
           <span>Погрузка и вывоз мусора.</span>
         </a>
         <a href="https://rutube.ru/video/2855dbe9aac005e09785c911063e8800/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video3.jpg" alt="img">
           <span>Отзыв клиента </span>
         </a>
       </div>
@@ -1221,7 +1221,7 @@
       <p>Тип отходов – различный: от фрагментов стройматериалов и старой мебели до бытового мусора, и
         прочего хлама.</p>
         <p><a class="link-box link-pdf" href="./images/sertifikat/price.pdf" target="_blank"
-          data-fancybox-type="iframe">Прайс-лист на демонтажные услуги. </a></p>
+          data-fancybox-type="iframe"> Прайс-лист на вывоз и погрузку мусора. </a></p>
       <p><a class="link-box link-pdf" href="./contact.html#sovet">Полезные советы </a></p>
       <a class="link-box link-pdf present" href="./images/sertifikat/ser.jpg" target="_blank"
         data-fancybox-type="iframe">Подарочный сертификат </a>
