--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </g>
                   </g>
                 </svg>
-              </i><a href="/contacts.html">Наши контакты</a></h5>
+              </i><a href="./contact.html#contact">Наши контакты</a></h5>
           </div>
         </div>
       </div>
