--- a/redevelopment.html
+++ b/redevelopment.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <link href="css/maximenuckmobile.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/temp.css" rel="stylesheet">
@@ -288,7 +288,7 @@
                     </g>
                   </g>
                 </svg>
-              </i><a href="/contacts.html">Наши контакты</a></h5>
+              </i><a href="./contact.html#contact">Наши контакты</a></h5>
           </div>
         </div>
       </div>
@@ -340,7 +340,7 @@
               <div class="top04 pull-right">
                 <div class="custom block-two">
                   <p>
-                    <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
+                  <div class="b24-web-form-popup-btn-5">Обратный звонок</div>
                   </p>
                 </div>
               </div>
@@ -414,15 +414,16 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
-                            <div class="maximenuck_box">
-                              <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
-                              <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
-                              <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
-                              <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
-                              <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
-                              <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
-                              <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
-                            </div>
+                        <div class="maximenuck_box">
+                          <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+                          <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+                          <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+                          <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+                          <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+                          <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+                          <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция
+                          </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Алмазная резка</span><i><svg
@@ -510,7 +511,7 @@
               </div>
               <div class="itemBody">
                 <div class="subtittle_redevelopment">Согласуем и узаконим перепланировку
-                    квартиры, помещения и здания.</div>
+                  квартиры, помещения и здания.</div>
                 <div class="col-md-12 col-xs-12 col-sm-12 ppt_common">
                   <div class="col-md-6 col-xs-12 col-sm-6 ppt_middle"><a id="lk1"></a>
                     <table class="plan_table">
@@ -645,8 +646,7 @@
                               <span class="sigProLinkOuterWrapper">
                                 <span class="sigProLinkWrapper">
                                   <a href="/images/redevelopment/1.jpg" class="sigProLink fancybox-button"
-                                    style="width: 100%; padding-bottom:71.428571428571%;"
-                                    target="_blank">
+                                    style="width: 100%; padding-bottom:71.428571428571%;" target="_blank">
                                     <img class="sigProImg" src="./images/redevelopment/1.jpg"
                                       alt="Нажмите для увеличения изображения Smolenki.jpg">
                                     <div class="im_zoom" style="position: absolute; display: none;"></div>
@@ -672,8 +672,7 @@
                               <span class="sigProLinkOuterWrapper">
                                 <span class="sigProLinkWrapper">
                                   <a href="./images/redevelopment/2.jpg" class="sigProLink fancybox-button"
-                                    style="width: 100%; padding-bottom:71.428571428571%;"
-                                    target="_blank">
+                                    style="width: 100%; padding-bottom:71.428571428571%;" target="_blank">
                                     <img class="sigProImg" src="./images/redevelopment/2.jpg"
                                       alt="Нажмите для увеличения изображения Turistskaia.jpg">
                                     <div class="im_zoom" style="position: absolute; display: none;"></div>
@@ -697,8 +696,7 @@
                               <span class="sigProLinkOuterWrapper">
                                 <span class="sigProLinkWrapper">
                                   <a href="./images/redevelopment/3.jpg" class="sigProLink fancybox-button"
-                                    style="width: 100%; padding-bottom:71.428571428571%;"
-                                    target="_blank">
+                                    style="width: 100%; padding-bottom:71.428571428571%;" target="_blank">
                                     <img class="sigProImg" src="./images/redevelopment/3.jpg"
                                       alt="Нажмите для увеличения изображения Stomatologiia.jpg">
                                     <div class="im_zoom" style="position: absolute; display: none;"></div>
@@ -719,7 +717,8 @@
                     </tr>
                   </tbody>
                 </table>
-                <div class="redevelopment_finish">Наши специалисты выполнят полный комплекс работ по подбору и подготовке
+                <div class="redevelopment_finish">Наши специалисты выполнят полный комплекс работ по подбору и
+                  подготовке
                   документов. Получение согласований перепланировки и переустройства жилого и нежилого помещения в
                   Санкт-Петербурге и Ленинградской области.</div>
               </div>
@@ -734,33 +733,38 @@
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 bz-one">
           <div class="moduletable">
-            <h4>АКЦИЯ! ТОЛЬКО В ИЮЛЕ СКИДКИ НА ДЕМОНТАЖ КВАРТИРЫ!</h4>
+            <h4>АКЦИЯ! ТОЛЬКО В <span id="month">ИЮЛЕ</span> СКИДКИ НА ДЕМОНТАЖ КВАРТИРЫ!</h4>
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12">
           <div class="col-md-6 col-xs-12 col-sm-6 bz-two">
             <div class="moduletable bz-one-block text-center">
+
+
               <div class="custom bz-one-block text-center">
-                <p><strong>В старом фонде и в Сталенке
-                  </strong><span style="color: #d50000;"><strong>&nbsp;- 10% на
-                      все работы<br></strong></span></p>
-                <p><strong>В Хрущёвке и в Брежневке
-                    <span style="color: #d50000;"><strong>&nbsp;- 15% на все
-                        работы<br></strong></span></strong></p>
+                <p><strong>Перепланировка квартиры</strong><span style="color: #d50000;"><strong> до
+                      20%<br></strong></span></p>
+                <p><strong>Перепланировка ком.помещения<span style="color: #d50000;"><strong> до
+                        10%<br></strong></span></strong></p>
+                <p><strong>Перепланировка зданий</strong> <span style="color: #d50000;"><strong>до
+                      10%<br></strong></span></p>
               </div>
             </div>
+
           </div>
           <div class="col-md-6 col-xs-12 col-sm-6 bz-three">
             <div class="moduletable bz-one-block text-center">
+
+
               <div class="custom bz-one-block text-center">
-                <p><strong>В панельном доме
-                    <span style="color: #d50000;"><strong>- 20% на все
-                        работы<br></strong></span></strong></p>
-                <p><strong>В новостройках
-                    <span style="color: #d50000;"><strong>- 25% на все
-                        работы<br></strong></span></strong></p>
+                <p><strong>Техническое обследование <span style="color: #d50000;"><strong>-
+                        10%<br></strong></span></strong></p>
+                <p><strong>Прочие услуги <span style="color: #d50000;"><strong>до 20%<br></strong></span></strong></p>
+                <p><strong>Консультация <span style="color: #d50000;"><strong>- 0 рублей<br></strong></span></strong>
+                </p>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -774,30 +778,42 @@
         <div class="col-md-12 col-xs-12 col-sm-12">
           <div class="col-md-4 col-xs-12 col-sm-4">
             <div class="moduletable z-one">
+
+
               <div class="custom z-one">
-                <p><img src="./images/sale.png" alt="" width="" height=""></p>
-                <h4>Мешки для мусора - БЕСПЛАТНО!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
+                <div><a id="lk6"></a></div>
+                <p><img src="/images/sale.png" alt="" width="" height=""></p>
+                <h4>При заказе перепланировки скидка на любой демонтаж до 30%</h4>
+                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
               </div>
             </div>
+
           </div>
           <div class="col-md-4 col-xs-12 col-sm-4">
             <div class="moduletable z-two">
+
+
               <div class="custom z-two">
-                <p><img src="./images/sale.png" alt="" width="" height=""></p>
-                <h4>Фасовка и уборка мусора - БЕСПЛАТНО!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
+                <div><a id="lk7"></a></div>
+                <p><img src="/images/sale.png" alt="" width="" height=""></p>
+                <h4>При заказе перепланировки скидка на алмазную резку и бурение до 20%</h4>
+                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
               </div>
             </div>
+
           </div>
           <div class="col-md-4 col-xs-12 col-sm-4">
             <div class="moduletable z-three">
+
+
               <div class="custom z-three">
-                <p><img src="./images/sale.png" alt="" width="" height=""></p>
-                <h4>СКИДКА 30% на погрузку, вывоз и утилизацию мусора!!!</h4>
-                <p><div class="b24-web-form-popup-btn-5 sdk">Заказать</div></p>
+                <div><a id="lk8"></a></div>
+                <p><img src="/images/sale.png" alt="" width="" height=""></p>
+                <h4>При заказе перепланировки скидка на усиление проемов до 20%</h4>
+                <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -1537,9 +1553,9 @@
     </div>
   </section>
 
-  
 
-  
+
+
 
 
   <div class="footer">
@@ -1695,18 +1711,18 @@
   </script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-<script src="./js/main.js"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/init.js"></script>
-<script src="./js/scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/init.js"></script>
+  <script src="./js/scripts.js"></script>
 
-<script>
-  Fancybox.bind('[data-fancybox="gallery"]', {
-    Thumbs: false,
-    width: 900,
-  });
-</script>
+  <script>
+    Fancybox.bind('[data-fancybox="gallery"]', {
+      Thumbs: false,
+      width: 900,
+    });
+  </script>
 
 </body>
 
