--- a/demolition.html
+++ b/demolition.html
@@ -288,7 +288,7 @@
                     </g>
                   </g>
                 </svg>
-              </i><a href="/contacts.html">Наши контакты</a></h5>
+              </i><a href="./contact.html#contact">Наши контакты</a></h5>
           </div>
         </div>
       </div>
@@ -2675,7 +2675,7 @@
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 bz-one">
           <div class="moduletable">
-            <h4>АКЦИЯ! ТОЛЬКО В ИЮЛЕ СКИДКИ НА ДЕМОНТАЖ КВАРТИРЫ!</h4>
+            <h4>АКЦИЯ! ТОЛЬКО В <span id="month">ИЮЛЕ</span> СКИДКИ!</h4>
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12">
@@ -3534,15 +3534,15 @@
       <h2>Видео наших работ</h2>
       <div class="video_flex">
         <a href="https://rutube.ru/video/a71458df8fb5b1333eec0ce3e565d149/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video1.jpg" alt="img">
           <span>Демонтаж квартиры на Невском проспекте.</span>
         </a>
         <a href="https://rutube.ru/video/f07bde70b811e4aacf0c6fb6e8b4a84c/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video2.jpg" alt="img">
           <span>Погрузка и вывоз мусора.</span>
         </a>
         <a href="https://rutube.ru/video/2855dbe9aac005e09785c911063e8800/" target="_blank" rel="noopener">
-          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <img class="youtube-link" src="./images/video3.jpg" alt="img">
           <span>Отзыв клиента </span>
         </a>
       </div>
