--- a/floor.html
+++ b/floor.html
@@ -299,14 +299,14 @@
         <div class="row">
           <div class="col-md-1 col-sm-12 col-xs-12 sv1">
             <div class="custom_logo">
-              <div><a title="На главную" href="/"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
+              <div><a title="На главную" href="index.html"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12 sv2">
             <div class="custom top02">
-              <p><a href="/">Компания</a></p>
-              <h3><a href="/">«Питер Демонтаж»</a></h3>
+              <p><a href="index.html">Компания</a></p>
+              <h3><a href="index.html">«Питер Демонтаж»</a></h3>
             </div>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12 sv3">
@@ -2045,7 +2045,7 @@
           </tr>
         </tbody>
       </table>
-      <a href="#" class="review_link">Еще реальные отзывы от наших клиентов на Авито</a>
+      <a href="https://www.avito.ru/brands/i81197078" class="review_link">Еще реальные отзывы от наших клиентов на Авито</a>
     </div>
   </section>
 
