--- a/index.html
+++ b/index.html
@@ -321,14 +321,14 @@
         <div class="row">
           <div class="col-md-1 col-sm-12 col-xs-12 sv1">
             <div class="custom_logo">
-              <div><a title="На главную" href="/"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
+              <div><a title="На главную" href="index.html"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12 sv2">
             <div class="custom top02">
-              <p><a href="/">Компания</a></p>
-              <h3><a href="/">«Питер Демонтаж»</a></h3>
+              <p><a href="index.html">Компания</a></p>
+              <h3><a href="index.html">«Питер Демонтаж»</a></h3>
             </div>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12 sv3">
