--- a/redevelopment.html
+++ b/redevelopment.html
@@ -299,14 +299,14 @@
         <div class="row">
           <div class="col-md-1 col-sm-12 col-xs-12 sv1">
             <div class="custom_logo">
-              <div><a title="На главную" href="/"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
+              <div><a title="На главную" href="index.html"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12 sv2">
             <div class="custom top02">
-              <p><a href="/">Компания</a></p>
-              <h3><a href="/">«Питер Демонтаж»</a></h3>
+              <p><a href="index.html">Компания</a></p>
+              <h3><a href="index.html">«Питер Демонтаж»</a></h3>
             </div>
           </div>
           <div class="col-md-4 col-sm-12 col-xs-12 sv3">
@@ -778,11 +778,9 @@
         <div class="col-md-12 col-xs-12 col-sm-12">
           <div class="col-md-4 col-xs-12 col-sm-4">
             <div class="moduletable z-one">
-
-
               <div class="custom z-one">
                 <div><a id="lk6"></a></div>
-                <p><img src="/images/sale.png" alt="" width="" height=""></p>
+                <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>При заказе перепланировки скидка на любой демонтаж до 30%</h4>
                 <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
               </div>
@@ -791,11 +789,9 @@
           </div>
           <div class="col-md-4 col-xs-12 col-sm-4">
             <div class="moduletable z-two">
-
-
               <div class="custom z-two">
                 <div><a id="lk7"></a></div>
-                <p><img src="/images/sale.png" alt="" width="" height=""></p>
+                <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>При заказе перепланировки скидка на алмазную резку и бурение до 20%</h4>
                 <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
               </div>
@@ -804,11 +800,9 @@
           </div>
           <div class="col-md-4 col-xs-12 col-sm-4">
             <div class="moduletable z-three">
-
-
               <div class="custom z-three">
                 <div><a id="lk8"></a></div>
-                <p><img src="/images/sale.png" alt="" width="" height=""></p>
+                <p><img src="./images/sale.png" alt="" width="" height=""></p>
                 <h4>При заказе перепланировки скидка на усиление проемов до 20%</h4>
                 <p><a class="b24-web-form-popup-btn-5 sdk">Заказать</a></p>
               </div>
