--- a/redevelopment.html
+++ b/redevelopment.html
@@ -733,7 +733,7 @@
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12 bz-one">
           <div class="moduletable">
-            <h4>АКЦИЯ! ТОЛЬКО В <span id="month">ИЮЛЕ</span> СКИДКИ НА ДЕМОНТАЖ КВАРТИРЫ!</h4>
+            <h4>АКЦИЯ! ТОЛЬКО В <span id="month">ИЮЛЕ</span> СКИДКИ!</h4>
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12">
